Fix scroll on mobiles

--- a/src/ui/views/game/style.scss
+++ b/src/ui/views/game/style.scss
@@ -24,3 +24,11 @@
     background: no-repeat center center; 
     background-size: cover;
 }
+
+.fullscreen {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
